Add PositionReport Component to chair

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D2C09E3F41F23536F8EA9F8223920C7C
+CopyrightNotice=Copyright Rob Wilson 2019
 
 [StartupActions]
 bAddPacks=True
