--- a/BuildingEscape/Config/DefaultEngine.ini
+++ b/BuildingEscape/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/NewMap.NewMap
 GameDefaultMap=/Game/NewMap.NewMap
-GlobalDefaultGameMode="/Script/BuildingEscape.BuildingEscapeGameMode"
+GlobalDefaultGameMode=/Game/GameMode_Blueprint.GameMode_Blueprint_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
